fixed z-index on styles - WC

--- a/src/css/rangeSelector.css
+++ b/src/css/rangeSelector.css
@@ -5,7 +5,7 @@
     background: rgba(255,255,255,0.3);
     position:absolute;
     top:0;
-    z-index:1000000;
+    z-index:1;
     cursor:pointer;
     pointer-events:none;
 }
